--- a/index.html
+++ b/index.html
@@ -16,67 +16,71 @@
         </ul>
       </nav>
       <address>
-        <a href="#">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="#">+11 (000) 111-11-11</a>
       </address>
     </header>
 
     <main>
-      <div>
-        <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
-      </div>
-
-      <div>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </div>
-      <div>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </div>
-      <div>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </div>
-      <div>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </div>
-
-      <h2>Our Team</h2>
-      <div>
-        <img src="images/mark.jpg" alt="Mark Guerrero" width="264px" />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-      </div>
-      <div>
-        <img src="images/tom.jpg" alt="Tom Ford" width="264px" />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-      </div>
-      <div>
-        <img src="images/camila.jpg" alt="Camila Garcia" width="264px" />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-      </div>
-      <div>
-        <img src="images/daniel.jpg" alt="Daniel Wilson" width="264px" />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-      </div>
+      <section>
+        <div>
+          <h1>Effective Solutions for Your Business</h1>
+          <button>Order Service</button>
+        </div>
+      </section>
+      <section>
+        <div>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </div>
+        <div>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </div>
+        <div>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </div>
+        <div>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <div>
+          <img src="images/mark.jpg" alt="Mark Guerrero" width="264px" />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </div>
+        <div>
+          <img src="images/tom.jpg" alt="Tom Ford" width="264px" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <img src="images/camila.jpg" alt="Camila Garcia" width="264px" />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </div>
+        <div>
+          <img src="images/daniel.jpg" alt="Daniel Wilson" width="264px" />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </div>
+      </section>
     </main>
 
     <footer>
