--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
       <section>
         <h2>Our Team</h2>
         <div>
-          <img src="images/mark.jpg" alt="Mark Guerrero" width="264px" />
+          <img src="images/mark.jpg" alt="Mark Guerrero" width="264" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </div>
         <div>
-          <img src="images/tom.jpg" alt="Tom Ford" width="264px" />
+          <img src="images/tom.jpg" alt="Tom Ford" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </div>
         <div>
-          <img src="images/camila.jpg" alt="Camila Garcia" width="264px" />
+          <img src="images/camila.jpg" alt="Camila Garcia" width="264" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </div>
         <div>
-          <img src="images/daniel.jpg" alt="Daniel Wilson" width="264px" />
+          <img src="images/daniel.jpg" alt="Daniel Wilson" width="264" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </div>
