--- a/index.html
+++ b/index.html
@@ -22,65 +22,55 @@
     </header>
 
     <main>
+      <!-- section 1 -->
       <section>
-        <div>
-          <h1>Effective Solutions for Your Business</h1>
-          <button>Order Service</button>
-        </div>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>Order Service</button>
       </section>
+      <!-- section 1 bitti -->
+
+      <!-- section 2 -->
       <section>
-        <div>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </div>
-        <div>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </div>
-        <div>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </div>
-        <div>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </div>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
       </section>
+      <!-- section 2 bitti -->
+
+      <!-- section 3 -->
       <section>
         <h2>Our Team</h2>
-        <div>
-          <img src="images/mark.jpg" alt="Mark Guerrero" width="264" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </div>
-        <div>
-          <img src="images/tom.jpg" alt="Tom Ford" width="264" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </div>
-        <div>
-          <img src="images/camila.jpg" alt="Camila Garcia" width="264" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </div>
-        <div>
-          <img src="images/daniel.jpg" alt="Daniel Wilson" width="264" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </div>
+        <img src="images/mark.jpg" alt="Mark Guerrero" width="264" />
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        <img src="images/tom.jpg" alt="Tom Ford" width="264" />
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <img src="images/camila.jpg" alt="Camila Garcia" width="264" />
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <img src="images/daniel.jpg" alt="Daniel Wilson" width="264" />
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
       </section>
+      <!-- section 3 bitti -->
     </main>
 
     <footer>
