--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <a href="#">WEBSTUDIO</a>
       <nav>
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="#">+11 (000) 111-11-11</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
 
@@ -25,7 +25,7 @@
       <!-- section 1 -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <input type="button" value="Order Service" />
       </section>
       <!-- section 1 bitti -->
 
